--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "webextension-toolbox build"
   },
   "devDependencies": {
+    "ts-loader": "^5.3.2",
+    "typescript": "^3.2.2",
     "webextension-toolbox": "latest"
   }
 }
