refactor(typescript): introduce tslint, fix rules, fix types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "target": "es6",
     },
     "include": [
-        "app/scripts/background.ts"
+        "app/scripts/*.ts",
+        "app/types/*.d.ts"
     ]
 }
