--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "google-remember-sso",
   "version": "0.1.0",
-  "description": "Remember Google user per domain",
+  "description": "Enables choosing a default account for a given Google Account chooser",
   "scripts": {
     "dev": "webextension-toolbox dev",
-    "build": "webextension-toolbox build"
+    "build": "webextension-toolbox build",
+    "lint": "tslint --project ."
   },
   "devDependencies": {
     "ts-loader": "^5.3.2",
+    "tslint": "^5.12.0",
     "typescript": "^3.2.2",
     "webextension-toolbox": "latest"
   }
